Adicionado mais uma rota na .env

--- a/front/package.json
+++ b/front/package.json
@@ -40,7 +40,8 @@
   },
   "react-dotenv": {
     "whitelist": [
-      "API_URL_AUTH"
+      "API_URL_AUTH",
+      "API_URL_DASHBOARD"
     ]
   }
 }
